Vertically center multi-line RenderTextHarfBuzz that uses SetMinLineHeight().

Currently the text is only vertically centered in the non-multi-line
case.

Test by comparing the effect of increasing the display rectangle versus
increasing the line height. These should behave the same, except in the
latter case the selection highlight should also increase in height.

BUG=704404

Review-Url: https://codereview.chromium.org/2767163003
Cr-Commit-Position: refs/heads/master@{#461361}

Former-commit-id: 9ec27b9e456d7d7f4899a2d9e7dc4efd8a1d1e5b